La mayoria de Tests han sido implementados, el código ha sido organizado y la forma de recorrer el árbol n-ario ha mejorado.